hphp/test/slow/traits/requireclass/requireclass_experimental.php.expectf
Fatal error: Cannot use unstable feature: `require_class` in %s/requireclass_experimental.php on line 5
